Added use of JQuery. Added some basic animation effects. Minor UI tweaks. Moved JS loading in document. Some minor text changes on page.

--- a/html/footer.html
+++ b/html/footer.html
@@ -1,5 +1,4 @@
 		<div id='footer'>
-			<p style='margin: 0; padding: 1px; color: #333333;'>&bull; <b>My Notepad Info</b> &bull;</p>
 			<p style='margin: 0; padding: 1px;'>By <a href='http://bradconte.com/about_me.html' tabindex='-1'>Brad Conte</a></p>
 			<p style='margin: 0; padding: 1px;'>Available <a href='https://github.com/B-Con/my-notepad-info'>on GitHub</a></p>
 		</div>
@@ -8,7 +7,12 @@
 
 </div>
 
-<!-- Originally written and designed by Brad Conte (B-Con) in 2007 -->
+<!-- Our custom functions depend on JQuery. The page does not need them to load, though. -->
+<script src='http://code.jquery.com/jquery-1.9.1.min.js'></script>
+<script type='text/javascript' src='js/functions-minify.js' async='async'></script>
+<!--<script type='text/javascript' src='js/base64.js' async='async'></script>-->
 
 </body>
 </html>
+
+<!-- Originally written and designed by Brad Conte (B-Con) in 2007. -->
