--- a/html/header.html
+++ b/html/header.html
@@ -8,8 +8,6 @@
 <head>
 <title>My Notepad Info</title>
 <link rel='stylesheet' type='text/css' href='css/styles-minify.css' />
-<script type='text/javascript' src='js/functions-minify.js' async='async'></script>
-<!--<script type='text/javascript' src='js/base64.js' async='async'></script>-->
 
 <!-- Google Analytics -->
 <script type="text/javascript">
@@ -18,11 +16,10 @@
   _gaq.push(['_trackPageview']);
 
   (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
-
 </script>
 
 <link rel='icon' type='image/png' href='img/favicon.png'>
@@ -43,8 +40,8 @@
 		</ul>
 	</div>
 
-	<div id='status-box' style='display: none;'>
-		<div id='progress-indicator'></div> <a name='form-top' class='anchor'><span id='status-label'>Status:</span></a> <span id='status-text'></span>
+	<div id='status-box' class='status-box-normal' style='display: none;'>
+		<a name='form-top' class='anchor'><span id='status-label'>Status:</span></a> <span id='status-text'></span>
 	</div>
 
 	<div id='page-content'>
