Fixed top of page positioning on login. Fixed string in API. Fixed showing e-mail address to logged in users on failed e-mail of notpad.

--- a/html/header.html
+++ b/html/header.html
@@ -41,7 +41,7 @@
 	</div>
 
 	<div id='status-box' class='status-box-normal' style='display: none;'>
-		<a name='form-top' class='anchor'><span id='status-label'>Status:</span></a> <span id='status-text'></span>
+		<span id='status-label'>Status:</span> <span id='status-text'></span>
 	</div>
 
 	<div id='page-content'>
