--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <h2>The Problem</h2>
 
-<p>Smartphones and cloud-y services are probably convenient solutions for more of life. But unfortunately, life still throws situations at us that our normal tools don't quite handle gracefully.</p>
+<p>Smartphones and cloud-y services probably offer convenient solutions for most of life. But unfortunately, life still throws situations at us that our normal tools don't quite handle gracefully.</p>
 
 <ul>
 <li>We still want to save URLs from a computer that isn't ours. </li>
@@ -46,7 +46,7 @@
 
 <h2>The Solution</h2>
 
-<p>Accessing a small notepad should be easy, fast, and painless. Login on the homepage, we show you your notes, you edit them, you save them, you leave. We even try to auto-save them as you go. Slow computer, slow Internet connection, doesn't matter, it loads fast. If you use the keyboard shortcuts you can get in, leave a note, and get out in 8 seconds.</p>
+<p>Leaving notes should be easy, fast, and painless. Login on the homepage, we show you your notes, you edit them, you save them, you leave. We even try to auto-save them as you go. Slow computer, slow Internet connection, it doesn't matter, the site should run smoothly. If you use the keyboard shortcuts you can get in, leave a note, and get out in 8 seconds.</p>
 
 <p>The notepad form has minimal bulk, straight-forward design, and a couple of supporting features. It's all about getting a password-protected text box in front of you with your notes as hassle-free as possible.</p>
       </section>
