Removed the stray CSS for real. Updated GitHub link. Some misc text changes.

--- a/html/footer.html
+++ b/html/footer.html
@@ -1,6 +1,6 @@
 		<div id='footer'>
-			<p style='margin: 0; padding: 1px;'>By <a href='http://bradconte.com/about_me.html' tabindex='-1'>Brad Conte</a></p>
-			<p style='margin: 0; padding: 1px;'>Available <a href='https://github.com/B-Con/my-notepad-info' tabindex='-1'>on GitHub</a></p>
+			<p>By <a href='http://bradconte.com/about_me.html' tabindex='-1'>Brad Conte</a></p>
+			<p>Available <a href='http://b-con.github.com/my-notepad-info/' tabindex='-1'>on GitHub</a></p>
 		</div>
 
 	</div>
