--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Smartphones and cloud-y services probably offer convenient solutions for saving 
 </ul>
 
 <p>
-Traditionally what do we do when we encounter a semi-bizarre situation? We stuff e-mail ourself. We use our email accounts as freaking temporary notepads. It's horrible. We go to website, possibly log out of someone else's account, log into our own account, open a couple pages, stick something in an e-mail body, then send it to ourselves. Then we later go get it and delete it. Web-based e-mail clients aren't particularly fast, either, so we have moderately long page load times several times over. (And doing it over a slow Internet connection feels like a pain because it takes 2 minutes to do something that should take 20 seconds. It's manageable, but it feels like an eternity.)
+Traditionally what do we do when we encounter a semi-bizarre situation? We stuff e-mail ourself. We use our email accounts as freaking temporary notepads. It's horrible. If we get caught without a smartphone, we lose the ability to save things effecitvely. We go to an e-mail provider, possibly log out of someone else's account, log into our own account, open a couple pages, stick something in an e-mail body, then send it to ourselves. Then we later go get it and delete it. Web-based e-mail clients aren't particularly fast, either, so we have moderately long page load times several times over. (And doing it over a slow Internet connection feels like a pain because it takes 2 minutes to do something that should take 20 seconds. It's manageable, but it feels like an eternity.)
 </p>
 
 <h2>The Solution</h2>
